--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,10 @@
     ],
     "require-dev": {
         "symfony/var-dumper": "^4.0"
+    },
+  "autoload": {
+    "psr-4": {
+      "Jira\\": "src/"
     }
+  }
 }
